<resources>
    <string name="app_name">File Transfer (OS)</string>
    <string name="send_file">Send File</string>
    <string name="receive_file">Receive File</string>
    <string name="select_type_send_receive">Select type send/receive!</string>
    <string name="a_product_of_isratech_software">A product of IsraTech Software</string>
    <string name="simple_file_transfer_tool">Simple File Transfer Tool</string>
    <string name="isratech_logo">Isratech Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_file_to_send">Pick file to send</string>
    <string name="chosen_file_path">Choose File (Double Click)</string>
    <string name="advanced_network_configs">Advanced network configs</string>
    <string name="bind_ip_address">Bind IP Address</string>
    <string name="bind_port">Bind Port</string>
    <string name="send_file_button">Send File</string>
    <string name="advanced_network_settings">Advanced</string>
    <string name="back">Back</string>
    <string name="sending_file">Sending File</string>
    <string name="main_menu">Main Menu</string>
    <string name="select_host">Select Host</string>
    <string name="auto">Auto</string>
    <string name="connect">Connect</string>
    <string name="scan">Scan</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="receiving_file">Receiving File</string>
    <string name="receive_more_files">Receive More Files</string>
    <string name="choose_path_double_click">Choose Path (Double Click)</string>
    <string name="stop">Stop</string>
</resources>