<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuScreenFragment">

    <TextView
        android:id="@+id/fileSendingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_file_to_send"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sendFileAdvancedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/advanced_network_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendFileButton"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/advancedNetworkConfigsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_network_configs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendFileAdvancedSwitch"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/chooseFilePathInputText"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:drawableStart="@android:drawable/sym_contact_card"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:filterTouchesWhenObscured="false"
        android:focusable="auto"
        android:focusedByDefault="true"
        android:hint="@string/chosen_file_path"
        android:importantForAutofill="no"
        android:linksClickable="true"
        android:longClickable="false"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileSendingTitle"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/bindIpAddressInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_info_details"
        android:ems="10"
        android:hint="@string/bind_ip_address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advancedNetworkConfigsTextView"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/bindPortInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_info_details"
        android:ems="10"
        android:hint="@string/bind_port"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bindIpAddressInputText"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/sendFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/send_file_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseFilePathInputText"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/pickFileFragmentBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/back"
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>