<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuScreenFragment">

    <Button
        android:id="@+id/menuScreenReceiveFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/receive_file"
        app:icon="@android:drawable/stat_sys_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/menuScreenSendFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/send_file"
        app:icon="@android:drawable/stat_sys_upload"
        app:layout_constraintBottom_toTopOf="@+id/menuScreenReceiveFileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/MenuScreenAppNameTextView"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:text="@string/simple_file_transfer_tool"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/MenuScreenSelectTypeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <TextView
        android:id="@+id/MenuScreenSelectTypeTextView"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:text="@string/select_type_send_receive"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#6C6868"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/menuScreenSendFileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/menuScreenLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/isratech_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuScreenReceiveFileButton"
        app:layout_constraintVertical_bias="0.457"
        app:srcCompat="@drawable/isratech_logo" />

    <TextView
        android:id="@+id/MenuScreenProductOfIsraTechTextView"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:text="@string/a_product_of_isratech_software"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#6C6868"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuScreenLogo"
        app:layout_constraintVertical_bias="0.162" />

</androidx.constraintlayout.widget.ConstraintLayout>