<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuScreenFragment">


    <TextView
        android:id="@+id/receivingFileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiving_file"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/receivingFileFragmentSendMoreFilesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/receive_more_files"
        app:icon="@android:drawable/stat_sys_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivingFileFragmentBackButton"
        app:layout_constraintVertical_bias="0.246"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/receiveFileSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivingFileText"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/receiveFileFragmentConnectionDetailsText"
        android:layout_width="348dp"
        android:layout_height="87dp"
        android:text="File data: 0/100kb"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiveFileSpinner"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/receiveFileFragmentIntoText"
        android:layout_width="344dp"
        android:layout_height="93dp"
        android:text="File name: Test\nFile size: test\nIP Address"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/receiveFileSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivingFileText"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/receivingFileFragmentBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/main_menu"
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiveFileFragmentConnectionDetailsText"
        app:layout_constraintVertical_bias="0.154"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>